Closed Bug 316965 Opened 20 years ago Closed 20 years ago

When importing Bookmarks from Firefox the Apostrophe Character (') shown in HTML code only, so i have to change it in every Bookmark description or site titles.

Categories

(Camino Graveyard :: Bookmarks, defect)

PowerPC
macOS
defect
Not set
trivial

Tracking

(Not tracked)

RESOLVED FIXED
Camino1.0

People

(Reporter: ilangai.mac, Assigned: bugzilla-graveyard)

Details

(Keywords: fixed1.8)

Attachments

(2 files, 1 obsolete file)

User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8) Gecko/20051107 Camino/1.0b1 Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8) Gecko/20051107 Camino/1.0b1 When importing Bookmarks from Firefox the Apostrophe Character (') shown in HTML code only, so i have to change it in every Bookmark description or site title. The Apostrophe Character is shown as ('). I noticed this only when i imported from Firefox, so i don't know if it happens when importing from other browsers. Reproducible: Always Steps to Reproduce: 1. Enter File > Import Bookmarks... 2. Select a bookmark file to import: Firefox 3. Imported the bookmarks to Camino Actual Results: The Apostrophe Character is shown as (') at the description area or site title. Expected Results: The Apostrophe Character should be shown as (').
Confirmed. Chris, care to take a look?
Status: UNCONFIRMED → NEW
Ever confirmed: true
Fx default bookmarks plus one named "Firefox's home page" to illustrate the problem.
Yeah, I can take this one. Please tell me Firefox isn't really exporting apostrophes as ' ... cl
Assignee: mikepinkerton → bugzilla
Status: NEW → ASSIGNED
Heh. Firefox *was* doing that, but that's a fixed bug (bug 246419). Suggest an upgrade to a newer Firefox for the reporter. This is basically another occurrence of bug 308998 for us. I've applied the same fix for this as I did there. Will post a patch momentarily. cl
Attached patch fixes our import of ' (obsolete) — Splinter Review
There we go. Silly Firefox! HTML entities are for kids! cl
Attachment #203529 - Flags: review?
Comment on attachment 203529 [details] [diff] [review] fixes our import of ' r=pink with a comment on why we need to do this
Attachment #203529 - Flags: review? → review+
There we go. Let's get this checked in ASAP. cl
Attachment #203529 - Attachment is obsolete: true
Attachment #203532 - Flags: review?(mikepinkerton)
(In reply to comment #4) > Heh. Firefox *was* doing that, but that's a fixed bug (bug 246419). Um, I have a sinking suspicion that bug 246419 regressed. The sample file I put up here is the bookmarks file created by Fx 1.5 RC3 from a fresh profile (default bookmarks, note the mozilla.com one, and my one addition) this morning.
Either that or the Fx/Sm bug was really about failing to convert the ' back in to ' when displaying in the UI, not about the file on disk; it's not clear reading through the bugs. It's a fix we need, regardless.
Yeah, that Fx/Sm stuff looks pretty busted. For instance, look at all the dupes on bug 245758 since it's been marked fixed. There's pretty clearly a serious problem with this over there. Thank God our bookmark code is our own in this case... cl
Target Milestone: --- → Camino1.0
Comment on attachment 203532 [details] [diff] [review] adds comment as requested Carryover review from previous patch.
Attachment #203532 - Flags: review?(mikepinkerton) → review+
Checked in, trank and brunch.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Keywords: fixed1.8
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: