Bug 316965, importing bookmarks from the fox brings apostrophes in as &#39;.  Seek and destroy, or find and replace.  Patch by Chris Lawson <bugzilla@chrislawson.net>.  Camino-only-npotdb.  r=pink